# sc2am

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  custom-issue-template.md  feature_request.md
docs/: architecture.md  commands.md  macos-setup.md
sc2am/: __init__.py  apple_music.py  config_manager.py  downloader.py  logger.py  metadata.py  validator.py
tests/: test_config_defaults.py  test_error_messages.py  test_metadata_mapping.py  test_validator.py
